--- a/example.html
+++ b/example.html
@@ -4,6 +4,9 @@
 <title>Example</title>
 </head>
 <body>
+<span class="bordered highlighted_cpp">#include&lt;stdio.h&gt;
+int main(){}
+</span>
 <div class="bordered highlighted_cpp">#include&lt;stdio.h&gt;
 int main(){}
 </div>
