--- a/example.html
+++ b/example.html
@@ -4,16 +4,11 @@
 <title>Example</title>
 </head>
 <body>
-<span class="bordered highlighted_cpp">#include&lt;stdio.h&gt;
-int main(){}
 </span>
 <div class="bordered highlighted_cpp">#include&lt;stdio.h&gt;
-int main(){}
+int main(){
+}
 </div>
-<script type="syntaxHighlighter" class="bordered highlighted_cpp">#include<stdio.h>
-int main(){}
-</script>
 <script src="highlighter.js"></script>
-<script>syntaxHighlighter()</script>
 </body>
 </html>
