--- a/example.html
+++ b/example.html
@@ -1,14 +1,8 @@
 <!doctype html>
-<html>
-<head>
+<meta charset=utf-8>
 <title>Example</title>
-</head>
-<body>
-</span>
 <div class="bordered highlighted_cpp">#include&lt;stdio.h&gt;
 int main(){
 }
 </div>
-<script src="highlighter.js"></script>
-</body>
-</html>
+<script src=highlighter.js></script>
