--- a/demo.html
+++ b/demo.html
@@ -1,26 +1,27 @@
 <!doctype html>
 <html>
 <head>
+<meta charset=utf-8>
 <title>Example</title>
 </head>
 <body>
-<div style="display:table;table-layout:fixed;width:100%;">
-    <div style="display:table-row;">
-        <div style="display:table-cell;width:50%;padding:16px;">
-            <textarea id="textarea" style="width:100%;" rows="16">#include&lt;stdio.h&gt;
+<div style=display:table;table-layout:fixed;width:100%;>
+    <div style=display:table-row>
+        <div style=display:table-cell;width:50%;padding:16px;>
+            <textarea id=textarea style=width:100% rows=16>#include&lt;stdio.h&gt;
 int main(){
     return 0;
 }
 </textarea>
         </div>
-        <div style="display:table-cell;width:50%;padding:16px;vertical-align:top;">
-            <div id="div">
-                <div id="divCode" class="bordered highlighted_cpp"></div>
+        <div style=display:table-cell;width:50%;padding:16px;vertical-align:top;>
+            <div id=div>
+                <div id=divCode class='bordered highlighted_cpp'></div>
             </div>
         </div>
     </div>
 </div>
-<script src="highlighter.js"></script>
+<script src=highlighter.js></script>
 <script>
 (()=>{
 var
