--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <title>Example</title>
 <div class="bordered highlighted_cpp">#include&lt;stdio.h&gt;
 int main(){
+    return 0;
 }
 </div>
 <script src=highlighter.js></script>
