--- a/src/demo.html
+++ b/src/demo.html
@@ -4,11 +4,7 @@
 <div style=display:table;table-layout:fixed;width:100%;>
     <div style=display:table-row>
         <div style=display:table-cell;width:50%;padding:16px;>
-            <textarea id=textarea style=width:100% rows=16>#include&lt;stdio.h&gt;
-int main(){
-    return 0;
-}
-</textarea>
+            <textarea id=textarea style=width:100% rows=16></textarea>
         </div>
         <div style=display:table-cell;width:50%;padding:16px;vertical-align:top;>
             <div id=div>
