--- a/src/demo.html
+++ b/src/demo.html
@@ -2,15 +2,13 @@
 <meta charset=utf-8>
 <title>Example</title>
 <div style=display:table;table-layout:fixed;width:100%;>
-    <div style=display:table-row>
-        <div style=display:table-cell;width:50%;padding:16px;>
-            <textarea id=textarea style=width:100% rows=16></textarea>
-        </div>
-        <div style=display:table-cell;width:50%;padding:16px;vertical-align:top;>
-            <div id=div>
-                <div id=divCode class='bordered highlighted_cpp'></div>
-            </div>
+    <div style=display:table-cell;width:50%;padding:16px;>
+        <textarea id=textarea style=width:100% rows=16></textarea>
+    </div>
+    <div style=display:table-cell;width:50%;padding:16px;vertical-align:top;>
+        <div id=div>
+            <div id=divCode class='bordered highlighted_cpp'></div>
         </div>
     </div>
 </div>
-<script src=https://cdn.rawgit.com/anliting/module/533c10b65a8b71c14de16f5ed99e466ddf8a2bae/src/module.js async data-main=demo.js></script>
+<script type=module src=demo.js></script>
